Added user login, signup and associated blog posts and comments to a user. Should have more commits...

--- a/app/views/comments/_comment.html
+++ b/app/views/comments/_comment.html
@@ -2,7 +2,7 @@
   <%= comment.body %>
 </p>
 <p>
-  <%= comment.commenter %>
+  <%= comment.commenter.name %>
 </p>
 <p>
   <%= link_to 'Delete', [comment.post, comment],
