--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,6 @@
     <% end %>
     </ul>
   <% end %>
-  <%= link_to "New post", new_post_path %>
+  <%= link_to "New post", new_user_post_path(@user) %>
 </div>
 
