--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%= form_for([@user, @post]) do |f| %>
   <% if @post.errors.any? %>
   <div id="error_messages">
     <h3><%= pluralize(@post.errors.count, "error") %> prohibited
