--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
   <%= link_to "Home", posts_path %>
   <h2><%= @post.title %></h2>
   <p><%= @post.body %></p>
-  <%= link_to "Edit", edit_post_path(@post) %>
-  <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
+  <%= link_to "Edit", edit_user_post_path(@user, @post) %>
+  <%= link_to "Delete", user_post_path(@user, @post), method: :delete, data: {confirm: "Are you sure?"} %>
 
   <h3>Comments</h3>
   <%= render @post.comments %>
