--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
-  <h1>Login</h1>
+  <h1>Login or Sign up</h1>
 
-  <%= link_to "Signup", new_user_path %>
+  <%= link_to "Login", login_path %>
+  <%= link_to "Signup", signup_path %>
 </div>
 
