--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :user do |f| %>
+<%= form_for @user do |f| %>
   <p>
     <%= f.text_field :name, placeholder: "Full name" %>
   </p>
@@ -9,7 +9,7 @@
     <%= f.text_field :password, placeholder: "Password" %>
   </p>
   <p>
-    <%= f.text_field :confirm_password, placeholder: "Confirm password" %>
+    <%= f.text_field :password_confirmation, placeholder: "Confirm password" %>
   </p>
   <p>
     <%= f.submit "Create" %>
